syntax = "proto3";
option go_package = ".;pb";
package pb;

service NearDBService {
  rpc Add (AddRequest) returns (NoneResponse) {}
  rpc Query (QueryRequest) returns (QueryResponse) {}
  rpc Remove (RemoveRequest) returns (NoneResponse) {}
}

message AddRequest {
  string id = 1;
  repeated string taglist = 2;
}

message RemoveRequest {
  string id = 3;
}

message NoneResponse {
}

message QueryRequest {
  repeated string taglist = 4;
  int64 k = 5;
}

message Item {
  string id = 6;
  float distance = 7;
}

message QueryResponse {
  repeated Item items = 8;
}